# action-atlas

./: .gitignore  .gitmodules  CONTRIBUTING.md  DATA_FORMAT.md  README.md  pyproject.toml
action_atlas/: .gitignore  __init__.py  backend_adapter.py  build_conceptviz_data.py  compare_clustering.py  config.py  generate_all_clustering.py  generate_feature_descriptions.py
action_atlas/api/: __init__.py  concept_helpers.py  concepts.py  data_loaders.py  experiment_helpers.py  experiments.py  features.py  helpers.py  injection.py  interventions.py  models.py  perturbation.py  scene_state.py  search.py  success_tracking.py  videos.py
action_atlas/backend/: run.py
action_atlas/data/: auto_experiment_stats.json  concept_features_ffn_backup.json  (+27 more)
experiments/: README.md  baseline.py  concept_ablation.py  concept_id.py  concept_identification.py  concept_steering.py  counterfactual.py  cross_task_injection.py  cross_task_injection_v2.py  grid_ablation.py  groot_common.py  hooks.py  launch_parallel.py  libero_utils.py  model_adapters.py  sae_hooks.py  train_sae.py  train_temporal_sae.py  utils.py  vision_perturbation.py
scripts/: analyze_concept_ablation_unified.py  bake_metaworld_scene_state.py  bake_oft_scene_state.py  bake_scene_state.py  build_oft_manifest.py  build_scene_state_indices.py  compute_experiment_stats.py  displacement_analysis_pi05_oft.py  generate_contrastive_concept_features.py  precompute_feature_embeddings.py  process_smolvla_ablation_for_atlas.py  smolvla_displacement_analysis.py  xvla_displacement_analysis.py
setup/: SETUP.md  download_checkpoints.py
(+125 files in other folders)
